UI for exclude_reblogs

--- a/app/javascript/mastodon/locales/defaultMessages.json
+++ b/app/javascript/mastodon/locales/defaultMessages.json
@@ -493,6 +493,10 @@
         "id": "account.posts"
       },
       {
+        "defaultMessage": "Toots and boosts",
+        "id": "account.posts_with_reblogs"
+      },
+      {
         "defaultMessage": "Toots and replies",
         "id": "account.posts_with_replies"
       },
