--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -404,8 +404,11 @@ en:
       mascot:
         desc_html: Displayed on multiple pages. At least 293×205px recommended. When not set, falls back to default mascot
         title: Mascot image
+      max_bio_chars:
+        desc_html: Set maximum biography length
+        title: Max Biography Size
       max_toot_chars:
-        desc_html: 'Set maximum toot length in characters (default: 500)'
+        desc_html: Set maximum toot length
         title: Max Toot Size
       peers_api_enabled:
         desc_html: Domain names this server has encountered in the fediverse
