--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -290,8 +290,8 @@ sk:
       rejecting_media: odmietanie médiálnych súborov
       rejecting_reports: odmietané hlásenia
       severity:
-        silence: stíš
-        suspend: vylúč
+        silence: stíšené
+        suspend: vylúčené
       show:
         affected_accounts:
           few: "Je ovplyvnených %{count} účtov v databázi"
