--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -288,7 +288,7 @@ sk:
       reject_reports: Zamietni hlásenia
       reject_reports_hint: Ignoruj všetky hlásenia prichádzajúce z tejto domény. Nevplýva na blokovania
       rejecting_media: odmietanie médiálnych súborov
-      rejecting_reports: odmietané hlásenia
+      rejecting_reports: odmietanie hlásení
       severity:
         silence: stíšené
         suspend: vylúčené
