Rename "Other" section to "Privacy"

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -778,7 +778,7 @@ en:
       too_many_options: can't contain more than %{max} items
   preferences:
     languages: Languages
-    other: Other
+    privacy: Privacy
     publishing: Publishing
     web: Web
   relationships:
