--- a/app/javascript/mastodon/locales/ja-IM.json
+++ b/app/javascript/mastodon/locales/ja-IM.json
@@ -1,4 +1,5 @@
 {
+  "account.add_or_remove_from_list": "リストに追加または外す",
   "account.badges.bot": "Bot",
   "account.block": "@{name}さんをブロック",
   "account.block_domain": "{domain}全体を非表示",
@@ -16,6 +17,7 @@
   "account.follows_you": "フォローされています",
   "account.hide_reblogs": "@{name}さんからのわかるわを非表示",
   "account.link_verified_on": "このリンクの所有権は{date}に確認されました",
+  "account.locked_info": "このアカウントは承認制アカウントです。相手が確認するまでフォローは完了しません。",
   "account.media": "メディア",
   "account.mention": "@{name}さんにReあふぅ",
   "account.moved_to": "{name}さんは引っ越しました:",
@@ -93,7 +95,7 @@
   "confirmations.mute.confirm": "ミュート",
   "confirmations.mute.message": "本当に{name}さんをミュートしますか？",
   "confirmations.redraft.confirm": "削除して下書きに戻す",
-  "confirmations.redraft.message": "本当にこのあふぅを削除し下書きに戻しますか？このあふぅへの全てのReあふぅやわかるわ、ティン！登録を失うことになります。",
+  "confirmations.redraft.message": "本当にこのあふぅを削除して下書きに戻しますか？ このあふぅへの全てのReあふぅやわかるわ、ティン！登録を失うことになります。",
   "confirmations.reply.confirm": "Reあふぅ",
   "confirmations.reply.message": "今Reあふぅすると現在作成中のメッセージが上書きされます。本当に実行しますか？",
   "confirmations.unfollow.confirm": "フォロー解除",
@@ -114,6 +116,7 @@
   "emoji_button.search_results": "検索結果",
   "emoji_button.symbols": "記号",
   "emoji_button.travel": "旅行と場所",
+  "empty_column.account_timeline": "あふぅがありません！",
   "empty_column.blocks": "まだ誰もブロックしていません。",
   "empty_column.community": "楽屋にはまだ誰もいないようです。",
   "empty_column.direct": "ダイレクトメッセージはまだありません。ダイレクトメッセージをやりとりすると、ここに表示されます。",
@@ -122,7 +125,7 @@
   "empty_column.favourites": "まだ誰もティンと来ていません。ティンと来るとここに表示されます。",
   "empty_column.follow_requests": "まだフォローリクエストを受けていません。フォローリクエストを受けるとここに表示されます。",
   "empty_column.hashtag": "このハッシュタグはまだ使われていません。",
-  "empty_column.home": "まだ誰もフォローしていません。楽屋を見に行くか、まずは検索？",
+  "empty_column.home": "まだ誰もフォローしていません。{public}を見に行くか、まずは検索？",
   "empty_column.home.public_timeline": "ライブステージ",
   "empty_column.list": "このリストにはまだなにもありません。このリストのメンバーが新しいあふぅをするとここに表示されます。",
   "empty_column.lists": "まだリストがありません。リストを作るとここに表示されます。",
@@ -132,16 +135,40 @@
   "follow_request.authorize": "許可",
   "follow_request.reject": "拒否",
   "getting_started.developers": "開発",
+  "getting_started.directory": "ディレクトリ",
   "getting_started.documentation": "ドキュメント",
-  "getting_started.find_friends": "Twitterの友達を探す",
   "getting_started.heading": "START!!",
   "getting_started.invite": "招待",
-  "getting_started.open_source_notice": "Mastodonはオープンソースソフトウェアです。誰でもGitHub（{github}）から開発に参加したり、問題を報告したりできます。",
+  "getting_started.open_source_notice": "Mastodonはオープンソースソフトウェアです。誰でもGitHub ( {github} ) から開発に参加したり、問題を報告したりできます。",
   "getting_started.security": "セキュリティ",
   "getting_started.terms": "プライバシーポリシー",
+  "hashtag.column_header.tag_mode.all": "と {additional}",
+  "hashtag.column_header.tag_mode.any": "か {additional}",
+  "hashtag.column_header.tag_mode.none": "({additional} を除く)",
+  "hashtag.column_settings.tag_mode.all": "すべてを含む",
+  "hashtag.column_settings.tag_mode.any": "いずれかを含む",
+  "hashtag.column_settings.tag_mode.none": "これらを除く",
+  "hashtag.column_settings.tag_toggle": "このカラムに追加のタグを含める",
   "home.column_settings.basic": "REGULAR",
   "home.column_settings.show_reblogs": "わかるわ表示",
   "home.column_settings.show_replies": "Reあふぅ表示",
+  "introduction.federation.action": "次へ",
+  "introduction.federation.federated.headline": "ライブステージ",
+  "introduction.federation.federated.text": "Fediverseの他のサーバーからの公開あふぅはライブステージに表示されます。",
+  "introduction.federation.home.headline": "楽屋",
+  "introduction.federation.home.text": "フォローしている人々のあふぅは楽屋に表示されます。どこのサーバーの誰でもフォローできます！",
+  "introduction.federation.local.headline": "楽屋",
+  "introduction.federation.local.text": "同じサーバーにいる人々の公開あふぅは楽屋に表示されます。",
+  "introduction.interactions.action": "はじめよう！",
+  "introduction.interactions.favourite.headline": "ティン！",
+  "introduction.interactions.favourite.text": "ティンと来た！ことで後から見られるよう保存したり、「好き」を相手に伝えたりできます。",
+  "introduction.interactions.reblog.headline": "ブースト",
+  "introduction.interactions.reblog.text": "ブーストすることでフォロワーにそのトゥートを共有できます。",
+  "introduction.interactions.reply.headline": "返信",
+  "introduction.interactions.reply.text": "自身や人々のあふぅに返信することで、一連の会話に繋げることができます。",
+  "introduction.welcome.action": "はじめる！",
+  "introduction.welcome.headline": "はじめに",
+  "introduction.welcome.text": "Fediverseの世界へようこそ！あと少しでメッセージを配信したり、さまざまなサーバーを越えた友達と話せるようになります。ところでここ{domain}は特別なサーバーです…あなたのプロフィールを持つ主体のサーバーですので、名前を覚えておきましょう。",
   "keyboard_shortcuts.back": "戻る",
   "keyboard_shortcuts.blocked": "ブロックしたユーザーのリストを開く",
   "keyboard_shortcuts.boost": "わかるわ",
@@ -219,6 +246,9 @@
   "notifications.clear_confirmation": "本当にホワイトボードを消しますか？",
   "notifications.column_settings.alert": "デスクトップ通知",
   "notifications.column_settings.favourite": "ティン！:",
+  "notifications.column_settings.filter_bar.advanced": "すべてのカテゴリを表示",
+  "notifications.column_settings.filter_bar.category": "クイックフィルターバー",
+  "notifications.column_settings.filter_bar.show": "表示",
   "notifications.column_settings.follow": "新しいフォロワー:",
   "notifications.column_settings.mention": "Reあふぅ:",
   "notifications.column_settings.notify_block": "フォロー/フォロワー外からの通知ブロック設定",
@@ -226,28 +256,12 @@
   "notifications.column_settings.reblog": "わかるわ",
   "notifications.column_settings.show": "カラムに表示",
   "notifications.column_settings.sound": "通知音を再生",
+  "notifications.filter.all": "すべて",
+  "notifications.filter.boosts": "わかるわ",
+  "notifications.filter.favourites": "ティン",
+  "notifications.filter.follows": "フォロー",
+  "notifications.filter.mentions": "Reあふぅ",
   "notifications.group": "{count} 件の通知",
-  "onboarding.done": "完了",
-  "onboarding.next": "次へ",
-  "onboarding.page_five.public_timelines": "ライブステージでは{domain}の人がフォローしているMastodon全体での公開あふぅを表示します。同じく楽屋では{domain}のみの公開あふぅを表示します。",
-  "onboarding.page_four.home": "「オフィス」タイムラインではあなたがフォローしている人のあふぅを表示します。",
-  "onboarding.page_four.notifications": "「ホワイトボード」ではあなたへの他の人からの関わりを表示します。",
-  "onboarding.page_one.federation": "Mastodonは独立したインスタンス（サーバー）の集合体です。",
-  "onboarding.page_one.full_handle": "あなたのフルハンドル",
-  "onboarding.page_one.handle_hint": "あなたを探している友達に伝えるといいでしょう。",
-  "onboarding.page_one.welcome": "Mastodonへようこそ！",
-  "onboarding.page_six.admin": "あなたのインスタンスの管理者は{admin}です。",
-  "onboarding.page_six.almost_done": "以上です。",
-  "onboarding.page_six.appetoot": "ボナペトゥート！",
-  "onboarding.page_six.apps_available": "iOS、Androidあるいは他のプラットフォームで使える{apps}があります。",
-  "onboarding.page_six.github": "MastodonはOSSです。バグ報告や機能要望あるいは貢献を{github}から行なえます。",
-  "onboarding.page_six.guidelines": "コミュニティガイドライン",
-  "onboarding.page_six.read_guidelines": "{domain}の{guidelines}を読むことを忘れないようにしてください！",
-  "onboarding.page_six.various_app": "モバイルアプリ",
-  "onboarding.page_three.profile": "「名刺を編集」から、あなたの自己紹介や表示名を変更できます。またそこでは他の設定ができます。",
-  "onboarding.page_three.search": "検索バーで、{illustration}や{introductions}のように特定のハッシュタグのあふぅを見たり、ユーザーを探したりできます。",
-  "onboarding.page_two.compose": "フォームからあふぅできます。イメージや、公開範囲の設定や、表示時の警告の設定は下部のアイコンから行なえます。",
-  "onboarding.skip": "スキップ",
   "privacy.change": "あふぅのプライバシーを変更",
   "privacy.direct.long": "指定した同僚だけに公開",
   "privacy.direct.short": "機密資料",
@@ -283,6 +297,8 @@
   "search_results.statuses": "あふぅ",
   "search_results.total": "{count, number}件の結果",
   "standalone.public_title": "今こんな話をしています...",
+  "status.admin_account": "@{name} のモデレーション画面を開く",
+  "status.admin_status": "このあふぅをモデレーション画面で開く",
   "status.block": "@{name}さんをブロック",
   "status.cancel_reblog_private": "わからないわ",
   "status.cannot_reblog": "このあふぅはわかれないわ",
@@ -317,10 +333,11 @@
   "status.show_less_all": "全て隠す",
   "status.show_more": "もっと見る",
   "status.show_more_all": "全て見る",
+  "status.show_thread": "スレッドを表示",
   "status.unmute_conversation": "会話のミュートを解除",
   "status.unpin": "名刺の固定表示を解除",
-  "suggestions.dismiss": "Dismiss suggestion",
-  "suggestions.header": "You might be interested in…",
+  "suggestions.dismiss": "隠す",
+  "suggestions.header": "興味あるかもしれません…",
   "tabs_bar.federated_timeline": "ステージ",
   "tabs_bar.home": "オフィス",
   "tabs_bar.local_timeline": "楽屋",
@@ -335,7 +352,7 @@
   "tag.remove_favourite": "スウィーティーじゃない",
   "tag.settings": "カラム設定",
   "trends.count_by_accounts": "{count} {rawCount, plural, one {人} other {人}} があふぅ",
-  "ui.beforeunload": "Mastodonから離れると送信前の投稿は失われます。",
+  "ui.beforeunload": "Mastodonから離れると送信前のあふぅは失われます。",
   "upload_area.title": "ドラッグ＆ドロップでアップロード",
   "upload_button.label": "メディアを追加 (JPEG, PNG, GIF, WebM, MP4, MOV)",
   "upload_form.description": "視覚障害者のための説明",
