Add ignore toot language

--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -109,6 +109,7 @@ en:
         setting_reduce_motion: Reduce motion in animations
         setting_show_application: Disclose application used to send toots
         setting_system_font_ui: Use system's default font
+        setting_ignore_toot_language: Ignore language information of toots
         setting_theme: Site theme
         setting_unfollow_modal: Show confirmation dialog before unfollowing someone
         severity: Severity
