--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -116,6 +116,7 @@ ja:
         username: ユーザー名
         username_or_email: ユーザー名またはメールアドレス
         whole_word: 単語全体にマッチ
+        setting_ignore_toot_language: トゥートの言語情報を無視する
       featured_tag:
         name: ハッシュタグ
       interactions:
