not sure how this got mixed in

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -408,7 +408,7 @@ en:
         desc_html: Set maximum biography length
         title: Max Biography Size
       max_toot_chars:
-        desc_html: Set maximum toot length
+        desc_html: 'Set maximum toot length in characters (default: 500)'
         title: Max Toot Size
       peers_api_enabled:
         desc_html: Domain names this server has encountered in the fediverse
