--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -405,7 +405,7 @@ en:
         desc_html: Displayed on multiple pages. At least 293×205px recommended. When not set, falls back to default mascot
         title: Mascot image
       max_bio_chars:
-        desc_html: Set maximum biography length
+        desc_html: 'Set maximum biography length in characters (default: 500)'
         title: Max Biography Size
       max_toot_chars:
         desc_html: 'Set maximum toot length in characters (default: 500)'
