--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -178,7 +178,7 @@ cs:
       statuses: Tooty
       subscribe: Odebírat
       suspended: Pozastaven/a
-      time_in_queue: Čeká ve frontě %{time}
+      time_in_queue: "Čeká ve frontě %{time}"
       title: Účty
       unconfirmed_email: Nepotvrzený e-mail
       undo_silenced: Zrušit utišení
