--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -501,7 +501,7 @@ ca:
       subject: Informe nou per a %{instance} (#%{id})
   appearance:
     advanced_web_interface: Interfície web avançada
-    advanced_web_interface_hint: "Si vols fer ús de tota l'amplada de la teva pantalla, l'interfície web avançada et permet configurar diverses columnes per a veure molta més informació al mateix temps: Inici, notificacions, línia de temps federada i qualsevol número de llistes i etiquetes."
+    advanced_web_interface_hint: 'Si vols fer ús de tota l''amplada de la teva pantalla, l''interfície web avançada et permet configurar diverses columnes per a veure molta més informació al mateix temps: Inici, notificacions, línia de temps federada i qualsevol número de llistes i etiquetes.'
     animations_and_accessibility: Animacions i accessibilitat
     confirmation_dialogs: Diàlegs de confirmació
     sensitive_content: Contingut sensible
