--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -503,6 +503,11 @@ sk:
       body: "%{reporter} nahlásil/a %{target}"
       body_remote: Niekto z %{domain} nahlásil/a %{target}
       subject: Nové hlásenie pre %{instance} (#%{id})
+  appearance:
+    advanced_web_interface: Pokročilé webové rozhranie    
+    animations_and_accessibility: Animácie a prístupnosť
+    confirmation_dialogs: Potvrdzovacie dialógy
+    sensitive_content: Chúlostivý obsah  
   application_mailer:
     notification_preferences: Zmeniť e-mailové voľby
     salutation: "%{name},"
