--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -227,7 +227,7 @@ sk:
       copy_failed_msg: Nebolo možné vytvoriť miestnu kópiu tohto emoji
       created_msg: Emoji úspešne vytvorené!
       delete: Zmazať
-      destroyed_msg: Emojo úspešne zničený!
+      destroyed_msg: Emoji úspešne zničené!
       disable: Zakázať
       disabled_msg: Emoji bolo úspešne zakázané
       emoji: Emotikony
@@ -503,7 +503,7 @@ sk:
       body: "%{reporter} nahlásil/a %{target}"
       body_remote: Niekto z %{domain} nahlásil/a %{target}
       subject: Nové hlásenie pre %{instance} (#%{id})
-  appearance:
+ appearance:
     advanced_web_interface: Pokročilé webové rozhranie    
     animations_and_accessibility: Animácie a prístupnosť
     confirmation_dialogs: Potvrdzovacie dialógy
