--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -509,7 +509,7 @@ sk:
     confirmation_dialogs: Potvrdzovacie dialógy
     sensitive_content: Chúlostivý obsah  
   application_mailer:
-    notification_preferences: Zmeň e-mailové voľby
+    notification_preferences: Zmeň emailové voľby
     salutation: "%{name},"
     settings: 'Zmeň emailové voľby: %{link}'
     view: 'Zobraziť:'
