--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -111,7 +111,7 @@ sk:
       email_status: Stav emailu
       enable: Povoľ
       enabled: Povolený
-      feed_url: URL adresa časovej osi
+      feed_url: adresa časovej osi
       followers: Sledujúci
       followers_url: URL adresa sledujúcich
       follows: Sledovania
@@ -388,7 +388,7 @@ sk:
       resolved_msg: Hlásenie úspešne vyriešené!
       status: Stav
       title: Hlásenia
-      unassign: Odobrať
+      unassign: Odober
       unresolved: Nevyriešené
       updated_at: Aktualizované
     settings:
@@ -503,7 +503,7 @@ sk:
       body: "%{reporter} nahlásil/a %{target}"
       body_remote: Niekto z %{domain} nahlásil/a %{target}
       subject: Nové hlásenie pre %{instance} (#%{id})
- appearance:
+appearance:
     advanced_web_interface: Pokročilé webové rozhranie    
     animations_and_accessibility: Animácie a prístupnosť
     confirmation_dialogs: Potvrdzovacie dialógy
