--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -226,9 +226,9 @@ sk:
       copy: Kopíruj
       copy_failed_msg: Nebolo možné vytvoriť miestnu kópiu tohto emoji
       created_msg: Emoji úspešne vytvorené!
-      delete: Zmazať
+      delete: Zmaž
       destroyed_msg: Emoji úspešne zničené!
-      disable: Zakázať
+      disable: Zakáž
       disabled_msg: Emoji bolo úspešne zakázané
       emoji: Emotikony
       enable: Povoľ
@@ -503,11 +503,11 @@ sk:
       body: "%{reporter} nahlásil/a %{target}"
       body_remote: Niekto z %{domain} nahlásil/a %{target}
       subject: Nové hlásenie pre %{instance} (#%{id})
-appearance:
-    advanced_web_interface: Pokročilé webové rozhranie    
+  appearance:
+    advanced_web_interface: Pokročilé webové rozhranie
     animations_and_accessibility: Animácie a prístupnosť
     confirmation_dialogs: Potvrdzovacie dialógy
-    sensitive_content: Chúlostivý obsah  
+    sensitive_content: Chúlostivý obsah
   application_mailer:
     notification_preferences: Zmeň emailové voľby
     salutation: "%{name},"
