Fix fa.yml syntax

--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -173,7 +173,7 @@ fa:
       statuses: نوشته‌ها
       subscribe: اشتراک
       suspended: تعلیق‌شده
-      time_in_queue: در حال انتظار %{time}
+      time_in_queue: 'در حال انتظار %{time}'
       title: حساب‌ها
       unconfirmed_email: ایمیل تأییدنشده
       undo_silenced: واگردانی بی‌صداکردن
